gitops/tools/apps/iso-lab/clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  labels:
    app.kubernetes.io/name: clickhouse
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: clickhouse
  ports:
    - {name: http, port: 8123, targetPort: http}
    - {name: native, port: 9000, targetPort: native}
